Removed need for run_AMLSim.sh within pipeline.sh